Stopped google search results from getting too wide

--- a/ssgs.css
+++ b/ssgs.css
@@ -112,6 +112,7 @@
 	border-top: 3px solid #555;
 	float: left;
 	padding-top: 2em;
+	width: 100%;
 }
 
 .ssgs-results-info {
